Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14534

Application Output not shown with Android M

    XMLWordPrintable

Details

    Description

      With a nexus 5 with the Android M Dev Preview nothing is shown in the application output.
      Using adb logcat I can see the output and what I think may be relevant to the issue, see in the attached log file.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            grecko Pierre-Yves Siret
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes