Android M: Support new logcat output

Change-Id: I64ae6493b45b3f1cac82e7f5e1ae77ec3b910bc9
Task-number: QTCREATORBUG-14534
Reviewed-by: BogDan Vatra <bogdan@kde.org>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>