src/plugins/android/androidrunner.h
@@ -73,8 +73,8 @@ signals:
     void remoteProcessStarted(int gdbServerPort, int qmlPort);
     void remoteProcessFinished(const QString &errString = QString());
 
-    void remoteOutput(const QByteArray &output);
-    void remoteErrorOutput(const QByteArray &output);
+    void remoteOutput(const QString &output);
+    void remoteErrorOutput(const QString &output);
 
 private slots:
     void checkPID();
@@ -120,6 +120,7 @@ private:
     bool m_isBusyBox;
     QStringList m_selector;
     QMutex m_mutex;
+    QRegExp m_logCatRegExp;
     DebugHandShakeType m_handShakeMethod;
     QTcpSocket *m_socket;
     bool m_customPort;
